Tighten margins to avoid jump

--- a/frontend/src/metabase/querying/notebook/components/JoinStep/JoinConditionColumnPicker/JoinColumnButton/JoinColumnButton.module.css
+++ b/frontend/src/metabase/querying/notebook/components/JoinStep/JoinConditionColumnPicker/JoinColumnButton/JoinColumnButton.module.css
@@ -37,7 +37,7 @@
     );
 
     min-height: 34px;
-    padding: 6px 20px;
+    padding: 5px 20px;
     color: var(--no-column-style-alpha-color);
     border: 2px solid var(--no-column-style-alpha-color);
     border-radius: 4px;
