--- a/frontend/src/metabase/querying/notebook/components/JoinStep/JoinDraft/JoinDraft.module.css
+++ b/frontend/src/metabase/querying/notebook/components/JoinStep/JoinDraft/JoinDraft.module.css
@@ -10,7 +10,6 @@
   justify-content: center;
   align-self: stretch;
   gap: 0.5rem;
-  padding: 0.5rem;
 }
 
 .JoinConditionOn {
